--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   transparent_image: ^1.0.0
   cached_network_image: ^1.1.2+1
   web_socket_channel: ^1.1.0
+  video_player: 0.10.2+5
+  camera: 0.5.6+3
 
 dev_dependencies:
   flutter_test:
