--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
   assets:
     - assets/images/loading_icon.gif
     - assets/images/startup_load.gif
+    - assets/images/sunrise.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
