--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,13 @@ dependencies:
   web_socket_channel: ^1.1.0
   video_player: 0.10.2+5
   camera: 0.5.6+3
+  json_annotation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^2.0.0
+  build_runner: ^1.0.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -56,6 +59,7 @@ flutter:
     - assets/images/loading_icon.gif
     - assets/images/startup_load.gif
     - assets/images/sunrise.png
+    - assets/test.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
