--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   video_player: 0.10.2+5
   camera: 0.5.6+3
   json_annotation: ^2.0.0
+  css_colors: ^1.0.0
+  url_launcher: ^5.2.5
 
 dev_dependencies:
   flutter_test:
