--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   json_annotation: ^2.0.0
   css_colors: ^1.0.0
   url_launcher: ^5.2.5
+  dio: 3.0.4
 
 dev_dependencies:
   flutter_test:
