--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   css_colors: ^1.0.0
   url_launcher: ^5.2.5
   dio: 3.0.4
+  date_format: 1.0.8
 
 dev_dependencies:
   flutter_test:
