--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   url_launcher: ^5.2.5
   dio: 3.0.4
   date_format: 1.0.8
+  event_bus: 1.1.0
 
 dev_dependencies:
   flutter_test:
