--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  dio: 3.0.4
+  json_annotation: ^2.0.0
+  flutter_banner_swiper: ^0.1.4
 
 dev_dependencies:
   flutter_test:
