--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dio: 3.0.4
   json_annotation: ^2.0.0
   flutter_banner_swiper: ^0.1.4
+  webview_flutter: 0.3.16
 
 dev_dependencies:
   flutter_test:
