--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   json_annotation: ^2.0.0
   flutter_banner_swiper: ^0.1.4
   webview_flutter: 0.3.16
+  package_info: 0.4.0+11
 
 dev_dependencies:
   flutter_test:
