--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   webview_flutter: 0.3.16
   package_info: 0.4.0+11
   flutter_spinkit: ^4.0.0
+  shared_preferences: 0.5.4+6
 
 dev_dependencies:
   flutter_test:
