--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   package_info: 0.4.0+11
   flutter_spinkit: ^4.0.0
   shared_preferences: 0.5.4+6
+  dio_cookie_manager: 1.0.0
+  path_provider: 0.4.1
 
 dev_dependencies:
   flutter_test:
