--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: 0.5.4+6
   dio_cookie_manager: 1.0.0
   path_provider: 0.4.1
+  fluttertoast: ^3.1.3
 
 dev_dependencies:
   flutter_test:
