--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dio_cookie_manager: 1.0.0
   path_provider: 0.4.1
   fluttertoast: ^3.1.3
+  fluttie: ^0.3.0
 
 dev_dependencies:
   flutter_test:
