--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   event_bus: 1.1.0
   sqflite: ^1.1.7+1
 
+  redux: 4.0.0
+  flutter_redux: 0.6.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
