--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   redux: 4.0.0
   flutter_redux: 0.6.0
 
+  scoped_model: ^1.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
