--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   scoped_model: ^1.0.1
   rxdart: ^0.19.0
 
+  provide: 1.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
