--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,12 @@ dependencies:
   flutter_redux: 0.6.0
 
   scoped_model: ^1.0.1
-  rxdart: ^0.19.0
+  rxdart: ^0.21.0
 
   provide: 1.0.2
 
   provider: ^3.2.0
+  dartin: ^0.0.1
 
 dev_dependencies:
   flutter_test:
