--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   package_info: ^0.3.2+1
+  dio: 3.0.8
 
 dev_dependencies:
   flutter_test:
